[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/displays/scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://objects/displays/DefaultTheme.tres" type="Theme" id=2]

[node name="MainMenu" type="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 156.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="OptionContainer" type="MarginContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="OptionContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 160.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )

[node name="BtnItems" type="Button" parent="OptionContainer/Buttons"]
margin_right = 100.0
margin_bottom = 28.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
text = "ITEMS"
flat = true
align = 0

[node name="BtnStats" type="Button" parent="OptionContainer/Buttons"]
margin_top = 32.0
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
text = "STATS"
flat = true
align = 0

[node name="BtnMagic" type="Button" parent="OptionContainer/Buttons"]
margin_top = 64.0
margin_right = 100.0
margin_bottom = 92.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
text = "MAGIC"
flat = true
align = 0

[node name="BtnTalk" type="Button" parent="OptionContainer/Buttons"]
margin_top = 96.0
margin_right = 100.0
margin_bottom = 124.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
text = "TALK"
flat = true
align = 0

[node name="BtnSave" type="Button" parent="OptionContainer/Buttons"]
margin_top = 128.0
margin_right = 100.0
margin_bottom = 156.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
text = "SAVE"
flat = true
align = 0

[connection signal="pressed" from="OptionContainer/Buttons/BtnItems" to="." method="_on_BtnItems_pressed"]
